# LLMOps

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 9a358738047f_initial_schema.py  b7c8a1f0d2e3_add_session_display_name.py
data/: Agentic AI.txt  Mankind_qa.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  sessions.ts  upload.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useRenameSession.ts
frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  SessionHistoryPage.tsx  UploadPage.tsx  (+1 more)
multi_doc_chat/auth/: dependencies.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/db/: __init__.py  database.py  models.py
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/repositories/: session_repository.py  user_repository.py
multi_doc_chat/services/: auth_service.py  session_delete_service.py  session_service.py  upload_service.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py  session_store.py
notebook/: RAG.ipynb  evaluations.ipynb  experiments.ipynb
templates/: index.html
test/: test_pageindex_query_normalization.py  test_pageindex_retriever.py
(+18 files in other folders)
