[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.8.16",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pypdf>=5.0.0",
    "sentence-transformers>=5.6.0",
    "structlog>=26.1.0",
]
[tool.uv]
managed = false
